@@ -32,6 +32,7 @@ static int show_threads = 0;
 static char *only_name = NULL;
 static int show_cpuset = 0;
 static int logical = 1;
+static int single_ancestor = 0;
 #define NO_ONLY_PID -1
 static long only_pid = NO_ONLY_PID;
 static long only_uid;
@@ -54,6 +55,7 @@ void usage(const char *name, FILE *where)
   fprintf (where, "  -l --logical       Use logical object indexes (default)\n");
   fprintf (where, "  -p --physical      Use physical object indexes\n");
   fprintf (where, "  -c --cpuset        Show cpuset instead of objects\n");
+  fprintf (where, "  --single-ancestor  Show a single ancestor containing the binding\n");
 #ifdef HWLOC_LINUX_SYS
   fprintf (where, "  -t --threads       Show threads\n");
 #endif
@@ -82,13 +84,25 @@ static void print_task(hwloc_topology_t topology,
   } else {
     hwloc_bitmap_t remaining = hwloc_bitmap_dup(cpuset);
     int first = 1;
-    while (!hwloc_bitmap_iszero(remaining)) {
-      char type[64];
-      unsigned idx;
+    char type[64];
+    unsigned idx;
+    if (single_ancestor) {
+      hwloc_obj_t obj = hwloc_get_obj_covering_cpuset(topology, cpuset);
+      while (obj->parent && hwloc_bitmap_isequal(obj->cpuset, obj->parent->cpuset) && !hwloc_obj_type_is_cache(obj->parent->type) )
+        obj = obj->parent;
+
+      hwloc_obj_type_snprintf(type, sizeof(type), obj, 1);
+      idx = logical ? obj->logical_index : obj->os_index;
+      if (idx == (unsigned) -1)
+        printf("%s", type);
+      else
+        printf("%s:%u", type, idx);
+    } else {
+     while (!hwloc_bitmap_iszero(remaining)) {
       hwloc_obj_t obj = hwloc_get_first_largest_obj_inside_cpuset(topology, remaining);
       /* don't show a cache if there's something equivalent and nicer */
       while (hwloc_obj_type_is_cache(obj->type) && obj->arity == 1)
-	obj = obj->first_child;
+        obj = obj->first_child;
       hwloc_obj_type_snprintf(type, sizeof(type), obj, 1);
       idx = logical ? obj->logical_index : obj->os_index;
       if (idx == (unsigned) -1)
@@ -97,6 +111,7 @@ static void print_task(hwloc_topology_t topology,
         printf("%s%s:%u", first ? "" : " ", type, idx);
       hwloc_bitmap_andnot(remaining, remaining, obj->cpuset);
       first = 0;
+     }
     }
     hwloc_bitmap_free(remaining);
   }
@@ -392,6 +407,8 @@ int main(int argc, char *argv[])
 #else
       fprintf (stderr, "Listing threads is currently only supported on Linux\n");
 #endif
+    } else if (!strcmp(argv[0], "--single-ancestor")) {
+      single_ancestor = 1;
     } else if (!strcmp(argv[0], "--pid")) {
       if (argc < 2) {
 	usage(callname, stderr);
